@@ -1,3 +1,7 @@
+2007-02-19  Akim Demaille  <akim.demaille@free.fr>
+
+	* containers.hh, containers.hxx (libport::mhas): New.
+
 2007-02-16  Akim Demaille  <akim@lrde.epita.fr>
 
 	NOMINMAX.
